# deepnash-torchrl

./: .clang-format  .gitignore  README.md  config.py  config_test.py  gui.py  gui_bot.py  primitives.py  requirements.txt  setup.py  startego.py  stratego_env_test.py  test_action_space_cpp.py  test_chasing.py  test_cpp.py  test_hydra.py  test_rb_main.py  test_two_square.py  train.py
benchmarks/: benchmark_env.py  benchmark_network_summary.py
conf/: config.yaml
conf/agents/: base_agent.yaml
conf/deepnash/agent_network/: base_stratego_agent.yaml
conf/deepnash/learn/: default_solver.yaml  rnad.yaml  rnad_solver.yaml
conf/deepnash/resources/: base_resources.yaml  collector.yaml  replay_buffer.yaml
conf/deepnash/training/: base_training.yaml
conf/env/: base_stratego_env.yaml
conf/env/stratego_config/: limited_4x4.yaml  original.yaml
conf/envs/: base_env.yaml
conf/envs/stratego/: base_stratego_env.yaml
conf/train/: base_training.yaml
conf/train/collector/: sync_data_collector.yaml
conf/train/deployment/: device_1_instance_1.yaml  device_2_instance_1.yaml  device_4_instance_1.yaml  device_8_instance_1.yaml  device_8_instance_2.yaml
conf/train/event/: event.yaml
conf/train/replay_buffer/: ensemble_replay_buffer.yaml
conf/train/solver/: rnad.yaml
csrc/: CMakeLists.txt  binding.cpp
csrc/core/: detectors.cpp  detectors.h  masked_multi_discrete.cpp  masked_multi_discrete.h  player_state_handler.cpp  player_state_handler.h  prettyprint.hpp  primitives.h  stratego_config.cpp  stratego_config.h  stratego_env.cpp  stratego_env.h
deep_nash/: __init__.py  agent.py  openspiel_rnad.py  rnad.py
deepnash/: __init__.py
deepnash/learn/: config.py  rnad.py
deepnash/nn/: __init__.py  agent.py  network.py
deepnash/stratego_gym/: __init__.py
deepnash/stratego_gym/envs/: config.py  detectors.py  startego.py  stratego_cpp_wrapper.py
learn/: config.py  rnad.py  vtrace.py
python/deepnash/: __init__.py  config.py
python/deepnash/agents/: __init__.py  registry.py
python/deepnash/learn/: config.py  (+3 more)
python/stratego/: __init__.py
stratego_gym/: setup.py
stratego_gym/envs/: __init__.py  config.py  detectors.py  masked_multi_descrete.py  primitives.py  startego.py
tests/: conftest.py
tests/env/: test_ending.py  test_more_square_rule.py  test_original.py  test_two_square_rule.py  utils.py
(+53 files in other folders)
